# solana_program

./: .gitignore  README.md  admin.json  ido-keypair.json  ido.json  package-lock.json  package.json  project.json  transfer_one.json  validator-keypair.json
client/: ido.ts  main.ts  utils.ts
ido/: Cargo.toml
ido/src/: error.rs  instruction.rs  processor.rs  state.rs
ido/tests/: functional.rs
