[package]
name = "ido"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.3"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9"
bincode = "1.3.3"
serde = "1.0.112"
serde_derive = "1.0.103"
md5 = "0.7.0"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"
rust-crypto = "0.2.36"

solana-bpf-loader-program = "1.6.7"
bs58 = "0.4.0"

[lib]
crate-type = ["cdylib", "lib"]